main.css
html,
body {
    font-family: "Avenir Next";
    margin: 0;
    color: #F3EFE0;
    scroll-behavior: smooth;
    overflow-x: hidden;
    max-width: 100vw;
}

h5 {
    text-align: center;
}

#main {
    margin-left: 0px;
    transition: margin-left .5s;
}

#main.is-active {
    margin-left: 200px;
}

.profile_img {
    position: fixed;
    top: 15px;
    right: 15px;
    width: 60px;
    height: 60px;
    border-radius: 50px;
    overflow: hidden;
    z-index: 100;
    transition: .3s;
}

.profile_img:hover {
    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.28);
    -webkit-transform: translateY(-5px);
    -ms-transform: translateY(-5px);
    transform: translateY(-5px);
}


.vertical-horizontal-center {
    padding: 50px;
}

.page {
    width: 100%;
    min-height: 100vh;
    font-weight: normal;
    display: flex;
    justify-content: center;
    align-items: center;
}

.page h1 {
    font-size: 50px;
    margin-top: 0;
    text-align: center;
    color: #C3423F;
}

.title-heading {
    text-align: center;
    text-transform: uppercase;
    line-height: 0;
    padding: 100px;
}

.title-heading h1 {
    color: #C3423F;
    font-size: 10rem;
    opacity: .3;
    margin: 0;
}

.title-heading h6 {
    color: #C3423F;
    font-size: 2rem;
    font-weight: 300;
    margin: 0;
}

hr {
    width: 75%;
    max-width: 75vw;
    border: 2px solid #F3EFE0;
    border-radius: 2px;
    margin-top: 30px;
    margin-bottom: 30px;
}

.page h3 {
    text-align: center;
    color: #F3EFE0;
}

#home:after {
    content: "";
    /* stretch a fixed position to the whole screen */
    position: fixed;
    /* fix for mobile browser address bar appearing disappearing */
    height: 100vh;
    /* needed to keep in the background */
    z-index: -1;
    background-image: url('images/home.JPG');
    -webkit-background-size: cover;
    -moz-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
    background-position: center center;
}

#about {
    background-color: #212738;
    z-index: 1;
}

#about img {
    width: 60%;
    height: auto;
    display: block;
    margin: auto;
    max-width: 100vw;
    border-radius: 10px;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.split-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.split-container-reverse {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.school {
    color: #F3EFE0;
}

.school h1 {
    color: #F3EFE0;
    font-size: 3em;
    margin-bottom: 10px;
    font-weight: normal;
    line-height: 1;
    /* max-width: 80vw; */
    text-align: center;
}

.school h2 {
    font-weight: normal;
    text-transform: uppercase;
    text-align: center;
    margin: 0;
}

.school h3 {
    font-weight: normal;
    text-transform: uppercase;
    margin-top: 0;
}

.school h4 {
    margin: 0;
    font-weight: normal;
}

.school .first {
    margin-top: 20px;
}

.school .descriptor {
    text-transform: uppercase;
    color: #C3423F;
    font-weight: bold;
}

.school ul {
    margin: 0;
    max-width: 80vw;
}

#education {
    background-color: #353F5A;
}

#skills {
    background-color: #212738;
}

#skills-container {
    display: flex;
    width: 75%;
    max-width: 80vw;
    margin: auto;
    flex-wrap: wrap;
}

.skill {
    font-size: 20px;
    padding: 10px;
    margin: 10px;
    border: 2px solid #F3EFE0;
    border-radius: 5px;
    display: inline-block;
}

.skill:hover {
    background-color: #445174;
}

#experience {
    background-color: #445174;
}

#connect {
    background-color: #353F5A;
}

#connect .connect_social_media {
    display: inline-block;
    margin-left: 50%;
    transform: translateX(-50%);
}

#connect .fab {
    padding: 20px;
    font-size: 30px;
    width: 30px;
    text-align: center;
    text-decoration: none;
    margin: 5px 2px;
    border-radius: 50%;
}

#connect .fab:hover {
    opacity: 0.7;
}

#connect .fa-facebook-f {
    background: #3B5998;
    color: white;
}

#connect .fa-linkedin-in {
    background: #007bb5;
    color: white;
}

#connect .fa-instagram {
    background: -webkit-linear-gradient(45deg, #405DE6, #5851DB, #833AB4, #C13584, #E1306C, #FD1D1D);
    background: linear-gradient(45deg, #405DE6, #5851DB, #833AB4, #C13584, #E1306C, #FD1D1D);
    color: white;
}

#connect .fa-github,
.fa-github-square {
    background: white;
    color: black;
}

#footer {
    background-color: #212738;
    text-align: center;
    padding: 20px;
}

.landing-text {
    margin: auto;
    max-width: 75%;
}

.landing-text h1 {
    margin: auto;
    text-align: center;
    color: #C3423F;
    font-size: 15vw;
    /* max-width: 600px; */
    max-width: 100%;
    position: relative;
    font-weight: 900;
    text-shadow:
        0.005em 0.005em 0 #212738,
        0.01em 0.01em 0 #2D364D,
        0.015em 0.015em #353F5A,
        0.02em 0.02em 0 #3C4867,
        0.025em 0.025em 0 #445174,
        0.03em 0.03em 0 #4B5A81,
        0.035em 0.035em 0 #53638D;
}

.landing-text h1:before {
    content: "";
    display: block;
    width: 75px;
    height: 2px;
    background: #C3423F;
    left: -80px;
    top: 50%;
    position: absolute;
}

.landing-text h1:after {
    content: "";
    display: block;
    width: 75px;
    height: 2px;
    background: #C3423F;
    right: -80px;
    top: 50%;
    position: absolute;
}

.landing-text h2 {
    text-align: center;
    font-style: italic;
    color: #F3EFE0;
    font-weight: normal;
    font-size: 30px;
    margin: 10px;
}

.landing-text h3 {
    color: #C3423F;
}
/* ... */

